# cmake-hello-world

./: .gitignore  .travis.yml  CMakeLists.txt  HelloWorld.cpp  LICENSE  README.md
Demo1/Hello/: Speaker.cpp
Demo2/Hello/: CMakeLists.txt  Speaker.h
Demo3/: build.bat
Hello/: CMakeLists.txt  Speaker.cpp  Speaker.h
HelloTests/: CMakeLists.txt
HelloTests/src/: SpeakerTests.cpp
MutiFiles/: CMakeLists.txt  HelloWorld.cpp  Max.cc  Max.h  build.bat
SingleFile/: CMakeLists.txt  HelloWorld.cpp  build.bat
Subdirectory/: CMakeLists.txt  HelloWorld.cpp
Subdirectory/math/: CMakeLists.txt
